--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -1,2 +1,22 @@
-<h1>Trips#index</h1>
-<p>Find me in app/views/trips/index.html.erb</p>
+<h1>Trips For: <%= current_user.email %></h1>
+<hr />
+
+<% if @trips.any? %>
+
+  <ul>
+    <% @trips.each do |trip| %>
+      <li>
+        <%= trip.name %>
+        <br />
+        <%= link_to 'Show Trip', trip_path(trip), class: "waves-effect waves-light btn"  %>
+        <%= link_to 'Edit Trip', edit_trip_path(trip), class: "waves-effect waves-light btn"  %>
+        <%= link_to 'Delete Trip', trip_path(trip), method: :delete, class: "waves-effect waves-light btn" %>
+      </li>
+      <% end %>
+    </ul>
+
+    <% else %>
+      <h3>No Trips!, Make a new one!</h3>
+    <% end %>
+
+    <%= link_to 'Make new trip', new_trip_path, class: "waves-effect waves-light btn" %>
