--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Trips#show</h1>
-<p>Find me in app/views/trips/show.html.erb</p>
+<h1>Here is your <%= @trip.name %></h1>
+<hr />
+
+<%= @trip.name %>
+<p>date: <%= @trip.date %></p>
+
+<br />
+<%= link_to 'Back to the Index!', trips_path %>
