address controller and views

--- a/app/views/addresses/edit.html.erb
+++ b/app/views/addresses/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Addresses#edit</h1>
-<p>Find me in app/views/addresses/edit.html.erb</p>
+<h1>Editing: <%= @address.info %></h1>
+<hr />
+
+<%= render(partial: 'form') %>
