--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Addresses#index</h1>
-<p>Find me in app/views/addresses/index.html.erb</p>
+<h1> Location Address For: <%= current_user.email %> </h1>
+<hr />
+
+<% if @addresses.any? %>
+
+  <ul class='list-group'>
+    <% @addresses.each do |car| %>
+      <li class='list-group-item'>
+        <%= address.info %>
+        <%= link_to 'Show', address_path(address), class: 'btn btn-primary' %>
+        <%= link_to 'Edit', edit_address_path(address), class: 'btn btn-warning' %>
+        <%= link_to 'Delete',
+                    address_path(address),
+                    class: 'btn btn-danger',
+                    data: {confirm: 'Really Delete?'},
+                    method: :delete %>
+      </li>
+    <% end %>
+  </ul>
+
+<% else %>
+  <h3>No Cars, Go Buy One!</h3>
+<% end %>
+
+<%= link_to 'Create New Trip Location Address', new_address_path, class: 'btn btn-primary' %>
