--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -6,3 +6,7 @@
 
 <br />
 <%= link_to 'Back to the Index!', trips_path %>
+<br />
+<%= link_to 'Add Location', new_trip_location_path(@trip) %>
+<br />
+<%= link_to 'Locations', trip_locations_path(@trip) %>
