Location view modifying

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,2 +1,9 @@
 <h1>Locations#show</h1>
 <p>Find me in app/views/locations/show.html.erb</p>
+
+<br />
+<%= link_to 'Back to the Index!', trips_path %>
+<br />
+<%= link_to 'Add Address', new_location_address_path(@location) %>
+<br />
+<%= link_to 'Address index', location_addresses_path(@location) %>
