--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Locations#index</h1>
-<p>Find me in app/views/locations/index.html.erb</p>
+<h1>Locations For: <%= current_user.email %></h1>
+<hr />
+
+<% if @locations.any? %>
+
+  <ul>
+    <% @locations.each do |location| %>
+      <li>
+        <%= location.name %>
+        <br />
+        <%= link_to 'Show Location', location_path(@trip), class: "waves-effect waves-light btn"  %>
+        <%= link_to 'Edit Location', edit_location_path(@trip), class: "waves-effect waves-light btn"  %>
+        <%= link_to 'Delete Location', location_path(@trip), method: :delete, class: "waves-effect waves-light btn" %>
+      </li>
+      <% end %>
+    </ul>
+
+    <% else %>
+      <h3>No Trips!, Make a new one!</h3>
+    <% end %>
+
+    <%= link_to 'Make new trip', new_trip_path, class: "waves-effect waves-light btn" %>
+
+<br />
+<%= link_to 'Back to the Index!', trips_path %>
+<br />
+<%= link_to 'Add Address', new_location_address_path(@location) %>
+<br />
+<%= link_to 'Address index', location_addresses_path(@location) %>
