--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit Location for <%= @trip %></h1>
+<h1>Edit Location for <%= @trip.name %></h1>
 <hr />
 <% if @location.errors.any? %>
   <h4> <%= @location.errors.count %> Errors Saving The Location </h4>
