--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -6,7 +6,7 @@
     <h6> <%= message %> </h6>
   <% end %>
 <% end %>
-<%= form_for @location do |f| %>
+<%= form_for [@trip, @location] do |f| %>
   <%= f.label :name %>
   <%= f.text_field :name, required:true %>
   <%= f.label :date %>
