--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -5,19 +5,22 @@
   <% end %>
 <% end %>
 
-<%= form_for @address, html: { class: 'form-horizontal'} do |f| %>
+<%= form_for [@location, @address], html: { class: 'form-horizontal'} do |f| %>
+
   <div class="form-group">
     <%= f.label :location_address, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_field :location_address, required: true, class: 'form-control', placeholder: 'Type Location Address Here' %>
     </div>
   </div>
+
   <div class="form-group">
     <%= f.label :description, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
       <%= f.text_area :description, class: 'form-control', placeholder: 'Car Model' %>
     </div>
   </div>
+
   <div class='text-center'>
     <%= f.submit nil, class: 'btn btn-primary' %>
   </div>
