fixed the shit that was fucked up

--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -15,10 +15,6 @@
 
 
 
-  <i>
-    Posted At: <%= @person.created_at %>
-  </i>
-
-
 <br />
-  <%= link_to 'Back to Index', addresses_path %>
+
+  <%= link_to 'Back to Index', trip_locations_path(@trip) %>
