--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -17,7 +17,7 @@
   <div class="form-group">
     <%= f.label :description, class: 'col-sm-2 control-label' %>
     <div class="col-sm-10">
-      <%= f.text_area :description, class: 'form-control', placeholder: 'Car Model' %>
+      <%= f.text_area :description, class: 'form-control', placeholder: 'Add Description of Location' %>
     </div>
   </div>
 
