--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -7,3 +7,4 @@
 
 <%= link_to 'Location Index', trip_locations_path(@trip) %>
 <%= link_to 'New Address', new_location_address_path(@location) %>
+<%= link_to 'Show Address', location_address_path(@location) %> 
