--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -16,5 +16,8 @@
 
 
 <br />
-  <%= link_to 'Edit Address', edit_location_address_path(@location)%>
+  <%= link_to 'Edit details', edit_location_address_path(@location)%>
+  <br />
+  <%= link_to 'Destroy', location_address_path(@location, @address), method: :delete%>
+  <br />
   <%= link_to 'Back to Index', trip_locations_path(@trip) %>
