--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -1,16 +1,18 @@
-<h1>Locations For: <%= current_user.email %></h1>
+<h1>Locations For: <%= @trip.name %></h1>
 <hr />
 
 <% if @locations.any? %>
 
   <ul>
     <% @locations.each do |location| %>
-      <li>
-        <%= location.name %>
-        <br />
+      <li class = 'show'>
+        <%= link_to location.name, trip_location_path(@trip, location) %>
+        <div class = 'links'>
         <%= link_to 'Edit', edit_trip_location_path(@trip, location)%>
         <%= link_to 'Delete', trip_location_path(@trip, location), method: :delete%>
-        <%= link_to 'Show Details', trip_location_path(@trip, location) %>
+
+      </div>
+
       <% end %>
     </ul>
 
@@ -21,4 +23,4 @@
     <%= link_to 'Make new Location', new_trip_location_path, class: "waves-effect waves-light btn" %>
 
 <br />
-<%= link_to 'Back to the Index!', trips_path %>
+<%= link_to 'Back to Trip Index!', trips_path %>
