--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -6,17 +6,17 @@
   <ul>
     <% @trips.each do |trip| %>
       <li>
-        <%= trip.name %>
-        <br />
+        <p><%= trip.name %>
         <%= link_to 'Show Trip', trip_path(trip), class: "waves-effect waves-light btn"  %>
         <%= link_to 'Edit Trip', edit_trip_path(trip), class: "waves-effect waves-light btn"  %>
         <%= link_to 'Delete Trip', trip_path(trip), method: :delete, class: "waves-effect waves-light btn" %>
+        </p>
       </li>
       <% end %>
     </ul>
 
     <% else %>
-      <h3>No Trips!, Make a new one!</h3>
+      <h3> <%= 'No Trips! Make a new one!'%> </h3>
     <% end %>
 
     <%= link_to 'Make new trip', new_trip_path, class: "waves-effect waves-light btn" %>
